--- a/01_AutomationTest_Learn_V0.1/project.json
+++ b/01_AutomationTest_Learn_V0.1/project.json
@@ -51,9 +51,15 @@
       },
       {
         "editingStatus": "Publishable",
-        "testCaseId": "782342fd-3bd8-4729-92e1-52fcdaa2cd4c",
+        "testCaseId": "67727a70-5412-4110-9a49-330da1034787",
         "testCaseType": "TestCase",
-        "fileName": "Utilities\\UiBank\\WFs\\UIBank_ApplyLoan.xaml"
+        "fileName": "Utilities\\01_Open.xaml"
+      },
+      {
+        "editingStatus": "Publishable",
+        "testCaseId": "7fa8dc46-cc71-4bd2-b5d9-29c5c5f582fd",
+        "testCaseType": "TestCase",
+        "fileName": "Utilities\\02_log.xaml"
       }
     ],
     "modernBehavior": true
